--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             list-style: none;
         }
         .box {
-            width: 500px;
+            width: 400px;
             margin: 0 auto;
             border: 1px solid #ccc;
             margin-top: 30px;
@@ -52,14 +52,14 @@
 <body>
     <div class="box">
         <ul class="head">
-            <li class="active">tab1</li>
-            <li>tab2</li>
-                <li>tab3</li>
+            <li class="active">傻逼一号</li>
+            <li>傻逼二号</li>
+                <li>傻逼三号</li>
         </ul>
         <ul class="content">
-            <li class="active">aaa</li>
-            <li>bbb</li>
-            <li>ccc</li>
+            <li class="active"><img src="images/1.JPG" alt=""></li>
+            <li><img src="images/2.JPG" alt=""></li>
+            <li><img src="images/3.JPG" alt=""></li>
         </ul>
     </div>
 
